<resources>
    <string name="app_name">ZayThelGyi</string>
    <string name="created_by">Created By</string>
    <string name="gp_name">Our Group</string>
    <string name="mingalarpar">Mingalar Par</string>
    <string name="welcome">welcome</string>
    <string name="start_use">start use</string>
    <string name="tocontinue">To Continue</string>
    <string name="user_name">user name</string>
    <string name="shop_name">shop name</string>
    <string name="phone">phone</string>
    <string name="address">address</string>
    <string name="need_to_add">"jgdlgj dkfjdkf dkj dj dkjs; s;lskdd skdsk jf fjdkjf mkjk kfje  kjfke fjkefj "</string>
    <string name="to_start_add">Start To Add</string>
    <string name="to_choose_category">To Choose Category</string>
    <string name="start_category_name">အ</string>
    <string name="category_name">စား‌ေသာက္ကုန္</string>
    <string name="category_count">0</string>
    <string name="category_price">Price</string>
    <string name="kyat">က်ပ္</string>
    <string name="no_quantity">No Quantity</string>
    <string name="category_quantity">အ‌ေရအတြက္</string>
    <string name="category_unit">ခု</string>
    <string name="continue_category">‌ေရှ့ဆက်ရန်....</string>
    <string name="the_name_of_category">The name of Category</string>
    <string name="need_to_sell">Can Sell</string>
    <string name="good_sell">Good Sell</string>
    <string name="navigation_drawer_open">Open navigation drawe</string>
    <string name="navigation_drawer_close">Close navigation drawe</string>
    <string name="to_start_sell">To Start Selling</string>
    <string name="in_order_to_category">Order to Category:</string>
    <string name="all">All</string>
    <string name="amount">Amount</string>
    <string name="total">Total</string>
    <string name="record_for_sell">Record For Sell</string>
    <string name="error">Require!!</string>
    <string name="to_create_category">To Create new Category</string>
    <string name="save">Save</string>
</resources>