<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:src="@drawable/logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_to_sell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/need_to_sell"
        android:lineHeight="20dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/label_margin_start_end"
        android:layout_marginEnd="@dimen/label_margin_start_end"/>

    <TextView
        android:id="@+id/tv_good_sell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_sell"
        app:layout_constraintTop_toBottomOf="@id/tv_to_sell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/label_margin_top_bottom"/>

    <Button
        android:id="@+id/btn_to_start_sell"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btn_height"
        android:text="@string/to_start_sell"
        android:textColor="@color/colorWhite"
        android:background="@color/btn_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>