<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorSplashScreenBg">

    <TextView
        android:id="@+id/tv_new_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_create_category"
        android:textSize="@dimen/title_text_size"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/welcome_margin_top_bottom"/>

    <EditText
        android:id="@+id/et_new_category_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/et_height"
        android:background="@color/colorWhite"
        android:hint="@string/the_name_of_category"
        android:paddingLeft="@dimen/et_padding_start_end"
        app:layout_constraintTop_toBottomOf="@id/tv_new_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginLeft="@dimen/et_margin_start_end"
        android:layout_marginRight="@dimen/et_margin_start_end"
        android:layout_marginTop="@dimen/et_margin_top_bottom"/>

    <Button
        android:id="@+id/btn_new_category_save"
        android:layout_width="0dp"
        android:layout_height="@dimen/et_height"
        android:background="@color/colorGreen"
        android:text="@string/save"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/label_text_size"
        app:layout_constraintTop_toBottomOf="@id/et_new_category_name"
        app:layout_constraintStart_toStartOf="@id/et_new_category_name"
        app:layout_constraintEnd_toEndOf="@id/et_new_category_name"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="@dimen/et_margin_top_bottom"
        android:layout_marginBottom="@dimen/et_margin_top_bottom"/>

</androidx.constraintlayout.widget.ConstraintLayout>