<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorSplashScreenBg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_remove_circle_outline_24"
        app:layout_constraintTop_toTopOf="@id/et_quantity"
        app:layout_constraintEnd_toStartOf="@id/et_quantity"
        app:layout_constraintBottom_toBottomOf="@id/et_quantity"
        android:layout_marginRight="@dimen/label_margin_start_end"/>

    <EditText
        android:id="@+id/et_quantity"
        android:layout_width="@dimen/et_quantity_width"
        android:layout_height="@dimen/et_quantity_height"
        android:background="@drawable/et_quantity_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/value_margin_top_bottom"/>

    <ImageView
        android:id="@+id/iv_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_add_circle_24"
        app:layout_constraintTop_toTopOf="@id/et_quantity"
        app:layout_constraintStart_toEndOf="@id/et_quantity"
        app:layout_constraintBottom_toBottomOf="@id/et_quantity"
        android:layout_marginRight="@dimen/label_margin_start_end"
        android:layout_marginLeft="@dimen/label_margin_start_end"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        app:layout_constraintTop_toBottomOf="@id/et_quantity"
        app:layout_constraintBottom_toBottomOf="@id/btn_for_sell"
        android:layout_margin="@dimen/label_margin_start_end">

        <TextView
            android:id="@+id/tv_category_name_for_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_name"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/et_padding_start_end"/>

        <TextView
            android:id="@+id/tv_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            app:layout_constraintTop_toBottomOf="@id/tv_category_name_for_sell"/>

        <TextView
            android:id="@+id/tv_category_price_for_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_price"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toBottomOf="@id/tv_line1"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/et_padding_start_end"/>

        <TextView
            android:id="@+id/tv_category_priceNumber_for_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100Ks"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toBottomOf="@id/tv_line1"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="@dimen/et_padding_start_end"/>

        <TextView
            android:id="@+id/tv_category_amount_for_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toBottomOf="@id/tv_category_price_for_sell"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/et_padding_start_end"/>

        <TextView
            android:id="@+id/tv_category_amountNumber_for_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toBottomOf="@id/tv_category_priceNumber_for_sell"
            app:layout_constraintStart_toStartOf="@id/tv_category_priceNumber_for_sell"
            android:padding="@dimen/et_padding_start_end"/>

        <TextView
            android:id="@+id/tv_line2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            app:layout_constraintTop_toBottomOf="@id/tv_category_amount_for_sell"/>

        <TextView
            android:id="@+id/tv_total_for_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toBottomOf="@id/tv_category_amount_for_sell"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/et_padding_start_end"
            android:layout_marginTop="@dimen/value_margin_top_bottom"/>

        <TextView
            android:id="@+id/tv_totalNumber_for_sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100Ks"
            android:textSize="@dimen/label_text_size"
            android:textColor="@color/text_black"
            app:layout_constraintTop_toTopOf="@id/tv_total_for_sell"
            app:layout_constraintStart_toStartOf="@id/tv_category_priceNumber_for_sell"
            android:padding="@dimen/et_padding_start_end"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_for_sell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/record_for_sell"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/value_text_size"
        android:background="@color/btn_background"
        app:layout_constraintTop_toBottomOf="@id/cl_main"
        app:layout_constraintBottom_toBottomOf="@id/cl_main"/>



</androidx.constraintlayout.widget.ConstraintLayout>