<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cl_category_main"
    app:cardCornerRadius="@dimen/cardview_radius"
    app:cardElevation="@dimen/cardview_elevation"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/cv_padding_start_end">

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorCardViewBg"
        app:cardCornerRadius="@dimen/cardview_radius"
        app:cardElevation="@dimen/cardview_elevation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorCardViewBg"
            android:padding="@dimen/adapter_image_padding">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_category"
                android:layout_width="@dimen/category_circle_image_width_height"
                android:layout_height="@dimen/category_circle_image_width_height"
                android:src="@color/btn_background"
                app:layout_constraintTop_toTopOf="@id/cl_category"
                app:layout_constraintStart_toStartOf="@id/cl_category"/>
            <TextView
                android:id="@+id/tv_start_category_name_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_category_name"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textColor="@color/colorWhite"
                app:layout_constraintTop_toTopOf="@id/civ_category"
                app:layout_constraintBottom_toBottomOf="@id/civ_category"
                app:layout_constraintStart_toStartOf="@id/civ_category"
                app:layout_constraintEnd_toEndOf="@id/civ_category"/>

            <TextView
                android:id="@+id/tv_category_name_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_name"
                app:layout_constraintTop_toTopOf="@id/civ_category"
                app:layout_constraintBottom_toBottomOf="@id/civ_category"
                app:layout_constraintStart_toEndOf="@id/civ_category"
                android:padding="@dimen/adapter_image_padding"
                />
            <TextView
                android:id="@+id/tv_category_count_frag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_count"
                android:textColor="@color/colorRed"
                app:layout_constraintTop_toTopOf="@id/civ_category"
                app:layout_constraintBottom_toBottomOf="@id/civ_category"
                app:layout_constraintStart_toEndOf="@id/tv_category_name_frag"
                android:padding="@dimen/adapter_image_padding"
                />

            <ImageView
                android:id="@+id/iv_dot_category_fag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_more_vert_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/cl_category"
                app:layout_constraintBottom_toBottomOf="@id/cl_category"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>